@@ -1,4 +1,4 @@
-#!/usr/local/bin/perl5 -w
+#! /usr/bin/env perl
  
 #---------------------------------------------------------------------------
 #@COPYRIGHT :
@@ -14,9 +14,9 @@
 #             express or implied warranty.
 #---------------------------------------------------------------------------- 
 #$RCSfile: mritotal_suppress.pl,v $
-#$Revision: 1.1 $
+#$Revision: 1.2 $
 #$Author: bert $
-#$Date: 2005-05-25 20:54:28 $
+#$Date: 2005-05-25 22:04:01 $
 #$State: Exp $
 #---------------------------------------------------------------------------
 
