@@ -1,5 +1,6 @@
 2005-05-25  Bert Vincent <bert@bic.mni.mcgill.ca>
 	* Build fixes
+	* Added orphan perl scripts
 	
 2005-03-18  Andrew Janke  <a.janke@gmail.com>
 	* replaced all sqrtf()'s with sqrt() for OSX build
